AC_INIT([TailsClock], [0.6])
AM_INIT_AUTOMAKE([foreign])

AM_MAINTAINER_MODE

dnl check for python -- 'dnl' is used for comments
AM_PATH_PYTHON

dnl PKG_CHECK_MODULES(PYGTK, pygtk-2.0)
dnl AC_SUBST(PYGTK_CFLAGS)
dnl AC_SUBST(PYGTK_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
gnome/Makefile
locale/Makefile
])
